AUGREL/src/objects/Document_Request_Line_Item__c.object
<CustomObject>
    <description>Extensions of snapshot data used to generate unique inputs for document processing in the Adobe Forms Service - used for fields that may be used many times as a child node in a single form generation.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyAddress1__c</fullName>
        <label>CoCustomer Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyAddress2__c</fullName>
        <label>CoCustomer Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyCity__c</fullName>
        <label>CoCustomer Address City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyState__c</fullName>
        <label>CoCustomer Address State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_AddyZip__c</fullName>
        <label>CoCustomer Address Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_FirstName__c</fullName>
        <label>CoCustomer First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_LastName__c</fullName>
        <label>CoCustomer Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoCustomer_MiddleName__c</fullName>
        <label>CoCustomer Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <label>Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DispatchName__c</fullName>
        <description>Dispatch Name (Print Central, Print Local, Network print,Email, Fax)</description>
        <label>Dispatch Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_DeviceName__c</fullName>
        <description>This field is for devicename</description>
        <label>Dispatch_DeviceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Request__c</fullName>
        <label>Document Request</label>
        <referenceTo>Document_Request__c</referenceTo>
        <relationshipLabel>Document Request Line Items</relationshipLabel>
        <relationshipName>Document_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Empty_Field__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empty Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenseType__c</fullName>
        <label>ExpenseType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenseValue__c</fullName>
        <label>ExpenseValue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Certified_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Certified Mail or not.</inlineHelpText>
        <label>Is Certified Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherCharge_Charge__c</fullName>
        <label>Other Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCharge_Description__c</fullName>
        <label>Other Charge Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepossessionChargesDescription__c</fullName>
        <label>OtherRepossessionChargesDescription</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRepossessionCharges__c</fullName>
        <label>OtherRepossessionCharges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReturnedCheckDate__c</fullName>
        <label>ReturnedCheckDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesTax__c</fullName>
        <label>SalesTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isLegalEnvelop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Legal Return Envelope Required or not</description>
        <label>Is Legal Envelop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noOfCopies__c</fullName>
        <description>Number of Copies required</description>
        <label>No Of Copies</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>returnEnvelop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Return Envelope Required or not</description>
        <label>return envelop required</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Request Line Item</label>
    <nameField>
        <label>Document Request Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>